--- a/src/css/board.css
+++ b/src/css/board.css
@@ -1,6 +1,7 @@
 .top-board {
   background-color: #eeefc6;
   font-family: "twayair";
+  min-width: 1120px;
 }
 .top-board:nth-child(2) {
   height: 320px;
@@ -39,7 +40,7 @@
 /* .top-board .header .nav .nav-em:nth-child(3) {
   border-bottom: 3px solid #22ab59;
 } */
-.top-board .top-banner {
+.top-board .top-board-banner {
   width: 1112px;
   height: 200px;
   margin: 0 auto;
@@ -47,10 +48,11 @@
   padding-top: 137px;
   display: flex;
 }
-.top-board .top-banner .banner-left {
-  width: 60%;
+.top-board .top-board-banner .banner-left {
+  min-width: 1112px;
+  width: 100%;
 }
-.top-board .top-banner .banner-left .banner-title {
+.top-board .top-board-banner .banner-left .banner-title {
   font-size: 64px;
   font-weight: 700;
   color: #413b3a;
@@ -58,12 +60,12 @@
   margin-bottom: 19px;
   line-height: 90px;
 }
-.top-board .top-banner .banner-left .banner-subtitle {
+.top-board .top-board-banner .banner-left .banner-subtitle {
   font-size: 20px;
   font-weight: 100;
   line-height: 32px;
 }
-.top-board .top-banner .banner-left .banner-desc {
+.top-board .top-board-banner .banner-left .banner-desc {
   margin-top: 20px;
   font-size: 16px;
 }
@@ -159,7 +161,7 @@
 }
 .board-wrapper .board-bottom .board-write-button {
   width: 85px;
-  color: #fff;
+  color: white;
   height: 40px;
   text-align: center;
   line-height: 40px;
@@ -168,20 +170,78 @@
   -ms-grid-column-align: right;
   justify-self: right;
 }
-.footer {
-  width: 100%;
-  height: 150px;
-  background-color: #e1e1e1;
-  padding-top: 40px;
+
+@media screen and (max-width: 800px) {
+  .top-board .top-board-banner .banner-left .banner-title {
+    font-size: 40px;
+  }
+  .top-board .top-board-banner .banner-left .banner-subtitle {
+    font-size: 18px;
+  }
+
+  .top-board {
+    min-width: 600px;
+  }
+  .top-board .header .header-content-wrapper {
+    width: 600px;
+  }
+
+  .top-board .top-board-banner {
+    width: 600px;
+  }
+
+  .top-board .top-board-banner .banner-left {
+    min-width: 600px;
+  }
+
+  .board-wrapper {
+    width: 600px;
+  }
+
+  .board-wrapper .board .list-em {
+    width: 600px;
+  }
+  .board-wrapper .board .list-em .list-em-regDate {
+    font-size: 12px;
+  }
+  .board-wrapper .board-bottom {
+    width: 600px;
+  }
 }
-.footer .footer-text {
-  width: 500px;
-  margin: 0 auto;
-  text-align: center;
-  line-height: 30px;
-}
-.footer .footer-icons {
-  font-size: 26px;
-  width: 120px;
-  margin: 10px auto;
+
+@media screen and (max-width: 550px) {
+  .top-board {
+    min-width: 320px;
+  }
+  .top-board .header .header-content-wrapper {
+    width: 320px;
+  }
+
+  .top-board .top-board-banner {
+    width: 320px;
+  }
+
+  .top-board .top-board-banner .banner-left {
+    min-width: 320px;
+  }
+
+  .board-wrapper {
+    width: 320px;
+  }
+
+  .board-wrapper .board .list-em {
+    width: 320px;
+  }
+  .board-wrapper .board .list-em .list-em-idx {
+    width: 100px;
+  }
+  .board-wrapper .board .list-em .list-em-regDate {
+    font-size: 12px;
+  }
+  .board-wrapper .board-bottom {
+    width: 320px;
+  }
+  .board-wrapper .board .list-em .list-em-writer {
+    display: none;
+  }
 }
