--- a/src/css/style.css
+++ b/src/css/style.css
@@ -89,7 +89,7 @@
 }
 .top .banner-right .banner-image .img {
   height: 436px;
-  background: url("https://junggam.click/api/img/04814ec2-35b8-4886-9cca-ab44d99492bc/");
+  background: url(https://junggam.click/api/img/dde0de43-6387-413b-bb32-7cfa6de028d7/);
   background-repeat: no-repeat;
   background-position: -170px -130px;
   /* box-shadow: inset 0 4px 4px rgba(0, 0, 0, 0.5); */
@@ -137,17 +137,17 @@
   margin-left: 40px;
 }
 .main-favorite-menu .favorite-menu-items .favorite-menu-item:nth-child(1) {
-  background-image: url(https://junggam.click/api/img/f23700e7-dcb1-4d74-b957-ff1aba68a641/);
+  background-image: url(https://junggam.click/api/img/7bd06faf-c356-4170-aae3-97807071b592/);
   background-repeat: no-repeat;
   background-position: 100px 130px;
 }
 .main-favorite-menu .favorite-menu-items .favorite-menu-item:nth-child(2) {
-  background-image: url(https://junggam.click/api/img/2edbcd99-ecb7-4c7f-8e2c-60a6921ccb11/);
+  background-image: url(https://junggam.click/api/img/dfb0b67c-3a76-4146-a7f2-1f689f259465/);
   background-repeat: no-repeat;
   background-position: 50px 190px;
 }
 .main-favorite-menu .favorite-menu-items .favorite-menu-item:nth-child(3) {
-  background-image: url(https://junggam.click/api/img/03153c8d-b1e5-42fd-8c63-b72ac9994e1d/);
+  background-image: url(https://junggam.click/api/img/4ec03aec-ddd0-4681-9d05-7459cb8734e2/);
   background-repeat: no-repeat;
   background-position: 50px 180px;
 }
@@ -274,7 +274,7 @@
   background-size: 1000px;
   background-position-x: -200px;
   background-repeat: no-repeat;
-  background-image: url(https://junggam.click/api/img/f8508e85-9269-4383-a278-23bd03be40cd/);
+  background-image: url(https://junggam.click/api/img/c44cb7a1-1b03-40b2-a602-1af5ce12875c/);
 }
 .bottom .bottom-intro,
 .bottom .bottom-map {
@@ -289,7 +289,7 @@
 .bottom .bottom-map .bottom-map-image {
   width: 1112px;
   height: 332px;
-  background-image: url(https://junggam.click/api/img/fbd0bffb-c9d0-498d-9975-92d8524b9de7/);
+  background-image: url(https://junggam.click/api/img/91ecd390-11a8-48bc-957d-9b6b9ee8ee33/);
   margin-bottom: 20px;
   margin-top: 20px;
   background-size: cover;
